--- a/pages/account-settings.html
+++ b/pages/account-settings.html
@@ -25,7 +25,8 @@
     <script src="../resources/js/bootstrap.min.js"></script>
     <script src="../resources/js/bootstrap.bundle.min.js"></script>
     <script src="../resources/js/password-strength.js"></script>
-    <script src="../resources/js/site.js"></script>
+    <script src="../resources/js/site.js" defer></script>
+    <script src="../resources/js/password.js"></script>
     <title>Account Settings</title>
 </head>
 <body>
@@ -183,12 +184,12 @@
                                     <div class="account__right--top">
                                         <img src="../resources/images/account-image.png" alt="account image">
                                         <div class="right__top--container">
-                                            <p class="right__top--details">
+                                            <button class="right__top--details">
                                                 <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                     <path d="M12.6666 8.6666C12.4898 8.6666 12.3202 8.73683 12.1952 8.86186C12.0702 8.98688 11.9999 9.15645 11.9999 9.33326V9.5866L11.0133 8.59993C10.6649 8.25429 10.194 8.06035 9.70325 8.06035C9.2125 8.06035 8.74164 8.25429 8.39325 8.59993L7.92659 9.0666L6.27325 7.41326C5.92 7.077 5.45096 6.88945 4.96325 6.88945C4.47554 6.88945 4.00651 7.077 3.65325 7.41326L2.66659 8.39993V4.6666C2.66659 4.48979 2.73682 4.32022 2.86185 4.19519C2.98687 4.07017 3.15644 3.99993 3.33325 3.99993H7.99992C8.17673 3.99993 8.3463 3.92969 8.47132 3.80467C8.59635 3.67964 8.66659 3.51008 8.66659 3.33326C8.66659 3.15645 8.59635 2.98688 8.47132 2.86186C8.3463 2.73684 8.17673 2.6666 7.99992 2.6666H3.33325C2.80282 2.6666 2.29411 2.87731 1.91904 3.25238C1.54397 3.62746 1.33325 4.13616 1.33325 4.6666V12.6666C1.33325 13.197 1.54397 13.7057 1.91904 14.0808C2.29411 14.4559 2.80282 14.6666 3.33325 14.6666H11.3333C11.8637 14.6666 12.3724 14.4559 12.7475 14.0808C13.1225 13.7057 13.3333 13.197 13.3333 12.6666V9.33326C13.3333 9.15645 13.263 8.98688 13.138 8.86186C13.013 8.73683 12.8434 8.6666 12.6666 8.6666ZM3.33325 13.3333C3.15644 13.3333 2.98687 13.263 2.86185 13.138C2.73682 13.013 2.66659 12.8434 2.66659 12.6666V10.2866L4.59992 8.35326C4.69786 8.25993 4.82796 8.20787 4.96325 8.20787C5.09854 8.20787 5.22864 8.25993 5.32659 8.35326L7.43992 10.4666L10.3066 13.3333H3.33325ZM11.9999 12.6666C11.999 12.7942 11.9569 12.9181 11.8799 13.0199L8.87325 9.99993L9.33992 9.53326C9.38771 9.48448 9.44476 9.44573 9.50772 9.41927C9.57069 9.39282 9.63829 9.37919 9.70659 9.37919C9.77488 9.37919 9.84249 9.39282 9.90545 9.41927C9.96841 9.44573 10.0255 9.48448 10.0733 9.53326L11.9999 11.4733V12.6666ZM15.1399 2.85993L13.1399 0.859931C13.0765 0.799237 13.0018 0.75166 12.9199 0.719931C12.7576 0.653252 12.5756 0.653252 12.4133 0.719931C12.3314 0.75166 12.2567 0.799237 12.1933 0.859931L10.1933 2.85993C10.1311 2.92209 10.0818 2.99588 10.0481 3.0771C10.0145 3.15831 9.99719 3.24536 9.99719 3.33326C9.99719 3.5108 10.0677 3.68106 10.1933 3.8066C10.3188 3.93213 10.4891 4.00266 10.6666 4.00266C10.8441 4.00266 11.0144 3.93213 11.1399 3.8066L11.9999 2.93993V6.6666C11.9999 6.84341 12.0702 7.01298 12.1952 7.138C12.3202 7.26303 12.4898 7.33326 12.6666 7.33326C12.8434 7.33326 13.013 7.26303 13.138 7.138C13.263 7.01298 13.3333 6.84341 13.3333 6.6666V2.93993L14.1933 3.8066C14.2552 3.86908 14.329 3.91868 14.4102 3.95252C14.4914 3.98637 14.5786 4.0038 14.6666 4.0038C14.7546 4.0038 14.8417 3.98637 14.923 3.95252C15.0042 3.91868 15.0779 3.86908 15.1399 3.8066C15.2024 3.74462 15.252 3.67089 15.2858 3.58965C15.3197 3.50841 15.3371 3.42127 15.3371 3.33326C15.3371 3.24526 15.3197 3.15812 15.2858 3.07688C15.252 2.99564 15.2024 2.92191 15.1399 2.85993Z" fill="#101623"/>
                                                 </svg>
-                                                Upload Profile
-                                            </p>
+                                                <span class="mx-2">Upload Profile</span>
+                                            </button>
                                             <p class="size__limit">
                                                 <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                     <path d="M6 5.5C5.86739 5.5 5.74022 5.55268 5.64645 5.64645C5.55268 5.74021 5.5 5.86739 5.5 6V8C5.5 8.13261 5.55268 8.25979 5.64645 8.35355C5.74022 8.44732 5.86739 8.5 6 8.5C6.13261 8.5 6.25979 8.44732 6.35356 8.35355C6.44732 8.25979 6.5 8.13261 6.5 8V6C6.5 5.86739 6.44732 5.74021 6.35356 5.64645C6.25979 5.55268 6.13261 5.5 6 5.5ZM6.19 3.54C6.06827 3.48999 5.93173 3.48999 5.81 3.54C5.74863 3.5638 5.69255 3.59948 5.645 3.645C5.60084 3.6936 5.56532 3.74941 5.54 3.81C5.51201 3.86934 5.49831 3.93441 5.5 4C5.49962 4.0658 5.51223 4.13103 5.53712 4.19195C5.562 4.25287 5.59866 4.30828 5.645 4.355C5.6936 4.39917 5.74941 4.43468 5.81 4.46C5.88575 4.49112 5.96798 4.50316 6.04948 4.49506C6.13097 4.48695 6.20922 4.45896 6.27736 4.41353C6.3455 4.36811 6.40144 4.30664 6.44026 4.23454C6.47908 4.16243 6.49959 4.08189 6.5 4C6.49816 3.86762 6.44637 3.74082 6.355 3.645C6.30745 3.59948 6.25138 3.5638 6.19 3.54ZM6 1C5.0111 1 4.0444 1.29324 3.22215 1.84265C2.39991 2.39206 1.75904 3.17295 1.3806 4.08658C1.00217 5.00021 0.90315 6.00555 1.09608 6.97545C1.289 7.94536 1.76521 8.83627 2.46447 9.53553C3.16373 10.2348 4.05465 10.711 5.02455 10.9039C5.99446 11.0969 6.99979 10.9978 7.91342 10.6194C8.82705 10.241 9.60794 9.6001 10.1573 8.77785C10.7068 7.95561 11 6.98891 11 6C11 5.34339 10.8707 4.69321 10.6194 4.08658C10.3681 3.47995 9.99983 2.92876 9.53554 2.46447C9.07124 2.00017 8.52005 1.63188 7.91342 1.3806C7.30679 1.12933 6.65661 1 6 1V1ZM6 10C5.20888 10 4.43552 9.7654 3.77772 9.32588C3.11992 8.88635 2.60723 8.26164 2.30448 7.53073C2.00173 6.79983 1.92252 5.99556 2.07686 5.21964C2.2312 4.44371 2.61217 3.73098 3.17158 3.17157C3.73099 2.61216 4.44372 2.2312 5.21964 2.07686C5.99557 1.92252 6.79983 2.00173 7.53074 2.30448C8.26164 2.60723 8.88635 3.11992 9.32588 3.77772C9.76541 4.43552 10 5.20887 10 6C10 7.06087 9.57858 8.07828 8.82843 8.82843C8.07828 9.57857 7.06087 10 6 10V10Z" fill="#9E9E9E"/>
@@ -240,10 +241,8 @@
                                                 <div class="col-lg-6 col-md-6 col-12">
                                                     <div class="form__group position-relative">
                                                         <label for="password_">Current Password</label>
-                                                        <input class="password__input" type="password" id="password_" placeholder="********">
-                                                        <svg class="position-absolute" width="16" height="10" viewBox="0 0 16 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                            <path d="M8.00008 0C4.66675 0 1.82008 2.07333 0.666748 5C1.82008 7.92667 4.66675 10 8.00008 10C11.3334 10 14.1801 7.92667 15.3334 5C14.1801 2.07333 11.3334 0 8.00008 0ZM8.00008 8.33333C6.16008 8.33333 4.66675 6.84 4.66675 5C4.66675 3.16 6.16008 1.66667 8.00008 1.66667C9.84008 1.66667 11.3334 3.16 11.3334 5C11.3334 6.84 9.84008 8.33333 8.00008 8.33333ZM8.00008 3C6.89341 3 6.00008 3.89333 6.00008 5C6.00008 6.10667 6.89341 7 8.00008 7C9.10675 7 10.0001 6.10667 10.0001 5C10.0001 3.89333 9.10675 3 8.00008 3Z" fill="#616161"/>
-                                                        </svg>
+                                                        <input class="password__input password" type="password" id="password_" placeholder="********">
+                                                        <span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password position-absolute"></span>
                                                     </div>
                                                 </div>
                                             </div>
@@ -251,10 +250,8 @@
                                                 <div class="col-lg-6 col-md-6 col-12">
                                                     <div class="form__group position-relative">
                                                         <label for="newPass">New Password</label>
-                                                        <input class="password__input account__new--password" type="password" id="newPass" placeholder="********">
-                                                        <svg class="position-absolute" width="16" height="10" viewBox="0 0 16 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                            <path d="M8.00008 0C4.66675 0 1.82008 2.07333 0.666748 5C1.82008 7.92667 4.66675 10 8.00008 10C11.3334 10 14.1801 7.92667 15.3334 5C14.1801 2.07333 11.3334 0 8.00008 0ZM8.00008 8.33333C6.16008 8.33333 4.66675 6.84 4.66675 5C4.66675 3.16 6.16008 1.66667 8.00008 1.66667C9.84008 1.66667 11.3334 3.16 11.3334 5C11.3334 6.84 9.84008 8.33333 8.00008 8.33333ZM8.00008 3C6.89341 3 6.00008 3.89333 6.00008 5C6.00008 6.10667 6.89341 7 8.00008 7C9.10675 7 10.0001 6.10667 10.0001 5C10.0001 3.89333 9.10675 3 8.00008 3Z" fill="#616161"/>
-                                                        </svg>
+                                                        <input class="password__input account__new--password password-new" type="password" id="newPass" placeholder="********">
+                                                        <span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password-new position-absolute"></span>
                                                     </div>
                                                     <div class="password-strength-group account__password--strength" data-strength="">
                                                         <div id="password-strength-meter " class="password-strength-meter">
@@ -285,10 +282,8 @@
                                                 <div class="col-lg-6 col-md-6 col-12">
                                                     <div class="form__group position-relative">
                                                         <label for="confirmPass">Confirm Password</label>
-                                                        <input class="password__input" type="password" id="confirmPass" placeholder="********">
-                                                        <svg class="position-absolute" width="16" height="10" viewBox="0 0 16 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                            <path d="M8.00008 0C4.66675 0 1.82008 2.07333 0.666748 5C1.82008 7.92667 4.66675 10 8.00008 10C11.3334 10 14.1801 7.92667 15.3334 5C14.1801 2.07333 11.3334 0 8.00008 0ZM8.00008 8.33333C6.16008 8.33333 4.66675 6.84 4.66675 5C4.66675 3.16 6.16008 1.66667 8.00008 1.66667C9.84008 1.66667 11.3334 3.16 11.3334 5C11.3334 6.84 9.84008 8.33333 8.00008 8.33333ZM8.00008 3C6.89341 3 6.00008 3.89333 6.00008 5C6.00008 6.10667 6.89341 7 8.00008 7C9.10675 7 10.0001 6.10667 10.0001 5C10.0001 3.89333 9.10675 3 8.00008 3Z" fill="#616161"/>
-                                                        </svg>
+                                                        <input class="password__input password-confirm" type="password" id="confirmPass" placeholder="********">
+                                                        <span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password-confirm position-absolute"></span>
                                                     </div>
                                                     <div class="match__password--alert">
                                                         <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
