--- a/pages/filter-dropdown-list.html
+++ b/pages/filter-dropdown-list.html
@@ -25,6 +25,7 @@
     <script src="../resources/js/bootstrap.min.js"></script>
     <script src="../resources/js/bootstrap.bundle.min.js"></script>
     <script src="../resources/js/site.js"></script>
+    <script src="../resources/js/fiter.js"></script>
     <title>Filter Dropdown</title>
 </head>
 <body>
