--- a/pages/reset-password.html
+++ b/pages/reset-password.html
@@ -25,7 +25,7 @@
     <script src="../resources/js/bootstrap.min.js"></script>
     <script src="../resources/js/bootstrap.bundle.min.js"></script>
     <script src="../resources/js/password-strength.js"></script>
-<!--    <script src="../resources/js/site.js"></script>-->
+    <script src="../resources/js/password.js"></script>
     <title>Saucedlt</title>
 </head>
 <body>
@@ -41,10 +41,8 @@
                 <form action="../pages/verification-code.html">
                     <div class="each__input--container d-flex flex-column position-relative mb-1">
                         <label for="name">Password</label>
-                        <input type="password" class="password-reset" name="email" placeholder="********" >
-                        <svg class="position-absolute" width="16" height="10" viewBox="0 0 16 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M8.00008 0C4.66675 0 1.82008 2.07333 0.666748 5C1.82008 7.92667 4.66675 10 8.00008 10C11.3334 10 14.1801 7.92667 15.3334 5C14.1801 2.07333 11.3334 0 8.00008 0ZM8.00008 8.33333C6.16008 8.33333 4.66675 6.84 4.66675 5C4.66675 3.16 6.16008 1.66667 8.00008 1.66667C9.84008 1.66667 11.3334 3.16 11.3334 5C11.3334 6.84 9.84008 8.33333 8.00008 8.33333ZM8.00008 3C6.89341 3 6.00008 3.89333 6.00008 5C6.00008 6.10667 6.89341 7 8.00008 7C9.10675 7 10.0001 6.10667 10.0001 5C10.0001 3.89333 9.10675 3 8.00008 3Z" fill="#616161"/>
-                        </svg>
+                        <input type="password" class="password-reset password" name="email" placeholder="********" >
+                        <span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password position-absolute"></span>
                     </div>
                     <div class="password__strength--container">
                         <span class="bar password__strength--bar"></span>
