--- a/pages/demo.html
+++ b/pages/demo.html
@@ -24,8 +24,11 @@
     <script src="../resources/js/jquery.min.js"></script>
     <script src="../resources/js/bootstrap.min.js"></script>
     <script src="../resources/js/bootstrap.bundle.min.js"></script>
+    <script src="../resources/js/dashboard.js"></script>
     <script src="../resources/js/site.js"></script>
-    <title>Job Active</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.6/Chart.bundle.min.js"></script>
+
+    <title>Saucedlt | DEMO</title>
 </head>
 <body>
 <!--Header Section-->
@@ -92,7 +95,7 @@
         <img src="../resources/images/logo/logo.png" alt="logo"/>
         <ul class="left__menu--items">
             <li class="each__menu--item">
-                <a href="./dashboard.html">
+                <a class="sidebar__active" href="./dashboard.html">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#F16532" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-globe"><circle cx="12" cy="12" r="10"></circle><line x1="2" y1="12" x2="22" y2="12"></line><path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"></path></svg>
                     Dashboard
                 </a>
@@ -123,18 +126,18 @@
                     />
                 </svg>
             </li>
-            <li class="dropdown__menu--items position-relative" id="dropdownMenu">
+            <li class="dropdown__menu--items menu__show position-relative" id="dropdownMenu">
                 <div class="position-absolute left__border--line"></div>
                 <ul>
                     <li class="dropdown__menu--item">
                         <span><a href="./job-active.html">Active</a></span>
                     </li>
-                    <li class="dropdown__menu--item sidebar__active">
-                        <span><a href="./job-draft.html">Draft</a></span>
+                    <li class="dropdown__menu--item">
+                        <span><a href="#">Draft</a></span>
                     </li>
                     </li>
                     <li class="dropdown__menu--item">
-                        <span><a href="job-archived.html">Archived</a></span>
+                        <span><a href="#">Archived</a></span>
                     </li>
                 </ul>
             </li>
@@ -161,158 +164,11 @@
 </div>
 <div class="content-container">
     <div class="container-layout">
-
-        <!--Search Action-->
-
-        <div class="payroll__search--container">
-            <div class="row m-0 justify-content-between">
-                <div class="col-lg-9 col-md-12 col-12">
-                    <div class="row m-0">
-                        <div class="col-lg-12 col-md-12 col-10 p-0">
-                            <div class="payroll__search">
-                                <svg width="12" height="12" viewBox="0 0 12 12" fill="none"
-                                     xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M8.33326 7.33326H7.8066L7.61993 7.15326C8.41993 6.21993 8.83326 4.9466 8.6066 3.59326C8.29326 1.73993 6.7466 0.259929 4.87993 0.0332621C2.05993 -0.313405 -0.313405 2.05993 0.0332621 4.87993C0.259929 6.74659 1.73993 8.29326 3.59326 8.6066C4.9466 8.83326 6.21993 8.41993 7.15326 7.61993L7.33326 7.80659V8.33326L10.1666 11.1666C10.4399 11.4399 10.8866 11.4399 11.1599 11.1666C11.4333 10.8933 11.4333 10.4466 11.1599 10.1733L8.33326 7.33326ZM4.33326 7.33326C2.67326 7.33326 1.33326 5.99326 1.33326 4.33326C1.33326 2.67326 2.67326 1.33326 4.33326 1.33326C5.99326 1.33326 7.33326 2.67326 7.33326 4.33326C7.33326 5.99326 5.99326 7.33326 4.33326 7.33326Z"
-                                          fill="#616161"/>
-                                </svg>
-                                <input type="text" name="search" id="payroll-search" placeholder="Search...">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-md-12 col-12 mt-lg-0 mt-sm-4">
-                    <div class="row align-items-center justify-content-end">
-                        <div class="col-lg-12 col-md-12 col-12 ps-0">
-                            <a href="./new-listing.html">
-                                <div class="btn__jobs">
-                                    <i class="fa fa-plus" aria-hidden="true"></i>
-                                    Add
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div class="breadcums">
+            <h3>Demo&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;Page</h3>
         </div>
 
-        <div class="payroll__table--container">
-            <div class="tab-content" id="nav-tabContent">
-                <div class="tab-pane fade show active" id="all-payroll" role="tabpanel" aria-labelledby="nav-home-tab">
-                    <h3 class="table__heading">3 Draft Jobs</h3>
-                    <table class="table table-borderless payroll__table">
-                        <thead>
-                        <tr>
-                            <th scope="col">Name of Role</th>
-                            <th scope="col">Date posted</th>
-                            <th scope="col">Views</th>
-                            <th scope="col">Applications</th>
-                            <th scope="col">Shortlist</th>
-                            <th scope="col">Action</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>
-                            <td>
-                                <label class="checkbox__container">Barista
-                                    <input type="checkbox">
-                                    <span class="checkmark"></span>
-                                </label>
-                            </td>
-                            <td>14 July 2021</td>
-                            <td>26</td>
-                            <td>10</td>
-                            <td>1</td>
-                            <td class="d-flex">
-                                <div class="action__btn recent__invitation">
-                                    <svg  width="24" height="24" viewBox="0 0 14 4" fill="none"
-                                          xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M1.99992 0.333496C1.08325 0.333496 0.333252 1.0835 0.333252 2.00016C0.333252 2.91683 1.08325 3.66683 1.99992 3.66683C2.91659 3.66683 3.66659 2.91683 3.66659 2.00016C3.66659 1.0835 2.91659 0.333496 1.99992 0.333496ZM11.9999 0.333496C11.0833 0.333496 10.3333 1.0835 10.3333 2.00016C10.3333 2.91683 11.0833 3.66683 11.9999 3.66683C12.9166 3.66683 13.6666 2.91683 13.6666 2.00016C13.6666 1.0835 12.9166 0.333496 11.9999 0.333496ZM6.99992 0.333496C6.08325 0.333496 5.33325 1.0835 5.33325 2.00016C5.33325 2.91683 6.08325 3.66683 6.99992 3.66683C7.91658 3.66683 8.66658 2.91683 8.66658 2.00016C8.66658 1.0835 7.91658 0.333496 6.99992 0.333496Z"
-                                              fill="#F16532"/>
-                                    </svg>
-                                    <div class="invitation__recent--container">
-                                        <ul>
-                                            <li>Edit</li>
-                                            <li>Delete</li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <label class="checkbox__container">Head Chef
-                                    <input type="checkbox">
-                                    <span class="checkmark"></span>
-                                </label>
-                            </td>
-                            <td>14 July 2021</td>
-                            <td>79</td>
-                            <td>23</td>
-                            <td>2</td>
-                            <td class="d-flex">
-                                <div class="action__btn">
-                                    <svg  width="24" height="24" viewBox="0 0 14 4" fill="none"
-                                          xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M1.99992 0.333496C1.08325 0.333496 0.333252 1.0835 0.333252 2.00016C0.333252 2.91683 1.08325 3.66683 1.99992 3.66683C2.91659 3.66683 3.66659 2.91683 3.66659 2.00016C3.66659 1.0835 2.91659 0.333496 1.99992 0.333496ZM11.9999 0.333496C11.0833 0.333496 10.3333 1.0835 10.3333 2.00016C10.3333 2.91683 11.0833 3.66683 11.9999 3.66683C12.9166 3.66683 13.6666 2.91683 13.6666 2.00016C13.6666 1.0835 12.9166 0.333496 11.9999 0.333496ZM6.99992 0.333496C6.08325 0.333496 5.33325 1.0835 5.33325 2.00016C5.33325 2.91683 6.08325 3.66683 6.99992 3.66683C7.91658 3.66683 8.66658 2.91683 8.66658 2.00016C8.66658 1.0835 7.91658 0.333496 6.99992 0.333496Z"
-                                              fill="#F16532"/>
-                                    </svg>
-                                </div>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <label class="checkbox__container">Head of Operations
-                                    <input type="checkbox">
-                                    <span class="checkmark"></span>
-                                </label>
-                            </td>
-                            <td>14 July 2021</td>
-                            <td>98</td>
-                            <td>52</td>
-                            <td>1</td>
-                            <td class="d-flex">
-                                <div class="action__btn">
-                                    <svg  width="24" height="24" viewBox="0 0 14 4" fill="none"
-                                          xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M1.99992 0.333496C1.08325 0.333496 0.333252 1.0835 0.333252 2.00016C0.333252 2.91683 1.08325 3.66683 1.99992 3.66683C2.91659 3.66683 3.66659 2.91683 3.66659 2.00016C3.66659 1.0835 2.91659 0.333496 1.99992 0.333496ZM11.9999 0.333496C11.0833 0.333496 10.3333 1.0835 10.3333 2.00016C10.3333 2.91683 11.0833 3.66683 11.9999 3.66683C12.9166 3.66683 13.6666 2.91683 13.6666 2.00016C13.6666 1.0835 12.9166 0.333496 11.9999 0.333496ZM6.99992 0.333496C6.08325 0.333496 5.33325 1.0835 5.33325 2.00016C5.33325 2.91683 6.08325 3.66683 6.99992 3.66683C7.91658 3.66683 8.66658 2.91683 8.66658 2.00016C8.66658 1.0835 7.91658 0.333496 6.99992 0.333496Z"
-                                              fill="#F16532"/>
-                                    </svg>
-                                </div>
-                            </td>
-                        </tr>
-                        </tbody>
-                    </table>
-                    <div class="bottom__pagination--container">
-                        <div class="page__number">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#757575" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-left"><polyline points="15 18 9 12 15 6"></polyline></svg>
-                            <span class="page__count page__fill">01</span>
-                            <span class="page__count">02</span>
-                            <span class="page__count">03</span>
-                            <span>...</span>
-                            <span class="page__count">24</span>
-                            <span>
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#757575" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg>
-                            </span>
-                        </div>
-                        <div class="row__number">
-                            <div class="chart__top--right">
-                                <select name="day">
-                                    <option selected value="0">10 Rows</option>
-                                    <option value="1">20 Rows</option>
-                                    <option value="2">30 Rows</option>
-                                </select>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
-
-
-    <!--            Footer          -->
-
-
     <footer>
         <div class="footer__container">
             <div class="footer__menu--container">
@@ -331,6 +187,7 @@
         </div>
     </footer>
 </div>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-
+beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
